# cplex-haskell

cplex/: cplex.cabal
cplex-bindings/: cplex-bindings.cabal
cplex-bindings/cbits/: my_cplex.c  my_cplex.h
cplex-bindings/src/CPLEX/: Bindings.hs
cplex-haskell/: cplex-haskell.cabal
cplex-haskell-bindings/: cplex-haskell-bindings.cabal
cplex-haskell-bindings/cbits/: my_cplex.c  my_cplex.h
cplex-haskell-bindings/src/CPLEX/: Bindings.hs
cplex-haskell/src/: CPLEX.hs  HighLevel.hs
cplex/src/: CPLEX.hs  Example.hs
cplex/src/CPLEX/: Param.hs
