Name:          cplex-bindings
Version:       0.1
license:       BSD3
license-file:  LICENSE
Copyright:     (c) Greg Horn 2012-2013
Author:        Greg Horn
Maintainer:    gregmainland@gmail.com
Stability:     Experimental
--Category:      Math
Build-type:    Simple
Cabal-version: >=1.8
synopsis:      low-level CPLEX bindings
--description:   TODO

Extra-source-files: cbits

Library
  Exposed-modules:  CPLEX.Bindings

  Build-depends: base >= 4 && < 5
  hs-source-dirs: src
  
--  Extra-lib-dirs:  /opt/ibm/ILOG/CPLEX_Studio124/cplex/bin/x86-64_sles10_4.1/
  if os(OSX)
    --Extra-lib-dirs:  /Users/ghorn/Applications/IBM/ILOG/CPLEX_Studio1251/cplex/bin/x86-64_osx
    Extra-lib-dirs:  /Users/ghorn/Applications/IBM/ILOG/CPLEX_Studio1251/cplex/lib/x86-64_osx/static_pic
    Extra-libraries: cplex

  if os(linux)
    Extra-lib-dirs:  /opt/ibm/ILOG/CPLEX_Studio1251/cplex/bin/x86-64_sles10_4.1
    Extra-libraries: cplex1251
--  Include-dirs:    /opt/ibm/ILOG/CPLEX_Studio124/cplex/include
--  Ghc-options: -pgml g++
--  cc-options: -Wall -Wextra

--  C-sources:         cbits/my_cplex.c
--  Install-includes:  cbits/my_cplex.h
