name:                cplex
version:             0.1.0.0
synopsis:            high-level CPLEX interface
-- description:         
license:             BSD3
license-file:        LICENSE
Copyright:           (c) Greg Horn 2012-2013
Author:              Greg Horn
Maintainer:          gregmainland@gmail.com
Stability:           Experimental
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   CPLEX,
                     CPLEX.Param
  -- other-modules:  
  Build-depends:     base >= 4 && < 5,
                     cplex-bindings
  hs-source-dirs:    src
